--- a/notebooks/2024/ucdavis.ipynb
+++ b/notebooks/2024/ucdavis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diversity of Ideas: Stanford Daily\n"
+    "# Diversity of Ideas: UC Davis\n"
    ]
   },
   {
