--- a/notebooks/2024/techniques/Lexical - LIWC.ipynb
+++ b/notebooks/2024/techniques/Lexical - LIWC.ipynb
@@ -27,9 +27,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +361,7 @@
        " 'skepticism'}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +429,6 @@
        "      <th>anger</th>\n",
        "      <th>anxiety</th>\n",
        "      <th>certainty</th>\n",
-       "      <th>cynicism_score</th>\n",
        "      <th>cynicism_lexical</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -451,7 +452,6 @@
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0429</td>\n",
-       "      <td>0.0429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -471,7 +471,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0769</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0103</td>\n",
        "      <td>0.0103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -493,7 +492,6 @@
        "      <td>0.0000</td>\n",
        "      <td>0.0625</td>\n",
        "      <td>0.0333</td>\n",
-       "      <td>0.0333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -511,7 +509,6 @@
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
@@ -539,11 +536,11 @@
        "2      0.0625           0.0000      0.0000    0.0   0.0000     0.0625   \n",
        "3      0.0000           0.0000      0.0000    0.0   0.0000     0.0000   \n",
        "\n",
-       "   cynicism_score  cynicism_lexical  \n",
-       "0          0.0429            0.0429  \n",
-       "1          0.0103            0.0103  \n",
-       "2          0.0333            0.0333  \n",
-       "3          0.0000            0.0000  "
+       "   cynicism_lexical  \n",
+       "0            0.0429  \n",
+       "1            0.0103  \n",
+       "2            0.0333  \n",
+       "3            0.0000  "
       ]
      },
      "metadata": {},
@@ -581,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +601,7 @@
        " 'skepticism'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +730,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9v/753h998178382xkzg96v6mwr0000gn/T/ipykernel_44353/3715912928.py:3: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "C:\\Users\\theod\\AppData\\Local\\Temp\\ipykernel_44920\\3715912928.py:3: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
       "  correlations = {col: spearmanr(liwc_df[col], liwc_df[\"cynicism_lexical\"])[0] for col in liwc_cynicism.keys()}\n"
      ]
     }
@@ -746,6 +743,13 @@
     "for category, corr in correlations.items():\n",
     "    print(f\"{category}: {corr:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
