--- a/notebooks/2024/techniques/Sentiment - VADER.ipynb
+++ b/notebooks/2024/techniques/Sentiment - VADER.ipynb
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /Users/pmui/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     }
