--- a/notebooks/2024/stanford.ipynb
+++ b/notebooks/2024/stanford.ipynb
@@ -44,9 +44,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     }
@@ -71,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/pmui/SynologyDrive/research/diversity-ideas/notebooks/2024'"
+       "'c:\\\\Users\\\\theod\\\\OneDrive\\\\dev\\\\diversity-ideas\\\\notebooks\\\\2024'"
       ]
      },
      "execution_count": 3,
@@ -335,7 +337,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
