--- a/notebooks/2024/harvard.ipynb
+++ b/notebooks/2024/harvard.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv, find_dotenv\n",
     "load_dotenv(find_dotenv())"
@@ -85,20 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8672, 6)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "op_eds_df = getFromFile(\"../../data/harvard-op-eds.parquet\", False)\n",
     "editorials_df = getFromFile(\"../../data/harvard-editorials.parquet\", False)\n",
@@ -1935,7 +1913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regress Goodness of Fit: VADER Sentiment Analysis\n"
+    "### Regression Goodness of Fit: VADER Sentiment Analysis\n"
    ]
   },
   {
@@ -1974,7 +1952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regress Goodness of Fit: LIWC Lexical Analysis\n"
+    "### Regression Goodness of Fit: LIWC Lexical Analysis\n"
    ]
   },
   {
