--- a/notebooks/2024/stanford.ipynb
+++ b/notebooks/2024/stanford.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.11.9)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/theod/OneDrive/dev/diversity-ideas/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
     }
    ],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
      "output_type": "stream",
      "text": [
       "is_cynical: True\n",
-      "reason: The statement expresses a strong distrust in the police as an institution, labeling them as corrupt and suggesting they do not serve their intended purpose of protection.\n",
+      "reason: The statement expresses a strong distrust in the police as an institution, labeling them as corrupt and suggesting they do not serve the public interest.\n",
       "mft_analysis: authority_subversion=0.9 loyalty_betrayal=0.7 fairness_cheating=0.8\n"
      ]
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,14 +854,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /Users/pmui/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +938,7 @@
        "list"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +967,7 @@
        "(76, 1024)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +996,7 @@
       "89    2024\n",
       "90    2024\n",
       "92    2024\n",
-      "Name: year, Length: 92, dtype: int64, 76, 0.0009767988097416414, 0.6102658017524276\n"
+      "Name: year, Length: 92, dtype: int64, 76, 0.0009768008118752794, 0.6100859639383259\n"
      ]
     }
    ],
@@ -1007,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1016,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     /Users/pmui/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     }
@@ -1032,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,31 +1097,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year        size        trace       pairwise    vader       lexical     cynicism    authority   loyalty     fairness    \n",
-      "----------------------------------------------------------------------------------------------------------------------\n",
-      "2010        207         0.001       0.710       0.082       0.055       0.199       0.225       0.191       0.182       \n",
-      "2011        137         0.001       0.692       0.045       0.022       0.256       0.289       0.255       0.224       \n",
-      "2012        50          0.001       0.734       0.090       0.000       0.261       0.282       0.244       0.258       \n",
-      "2013        32          0.001       0.729       0.082       0.000       0.374       0.437       0.362       0.322       \n",
-      "2014        62          0.001       0.752       -0.007      -0.004      0.380       0.382       0.371       0.385       \n",
-      "2015        68          0.001       0.786       0.038       0.014       0.372       0.401       0.351       0.362       \n",
-      "2016        44          0.001       0.726       0.186       0.020       0.304       0.295       0.339       0.277       \n",
-      "2017        66          0.001       0.720       -0.058      0.018       0.356       0.365       0.374       0.327       \n",
-      "2018        55          0.001       0.714       0.095       0.014       0.388       0.416       0.400       0.349       \n",
-      "2019        101         0.001       0.686       -0.034      0.028       0.371       0.367       0.403       0.342       \n",
-      "2020        166         0.001       0.668       -0.028      0.049       0.364       0.358       0.381       0.353       \n",
-      "2021        116         0.001       0.629       -0.050      0.012       0.323       0.310       0.362       0.296       \n",
-      "2022        91          0.001       0.621       0.084       0.015       0.340       0.352       0.337       0.332       \n",
-      "2023        84          0.001       0.575       0.105       0.032       0.424       0.436       0.465       0.371       \n",
-      "2024        76          0.001       0.610       0.022       0.000       0.424       0.437       0.453       0.383       \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "print(f\"{'year':<12}{'size':<12}{'trace':<12}{'pairwise':<12}{'vader':<12}{'lexical':<12}{'cynicism':<12}{'subversion':<12}{'betrayal':<12}{'injustice':<12}\")\n",
