--- a/notebooks/2024/cornell.ipynb
+++ b/notebooks/2024/cornell.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diversity of Ideas: Stanford\n"
+    "# Diversity of Ideas: Cornell\n"
    ]
   },
   {
