--- a/notebooks/2024/brown.ipynb
+++ b/notebooks/2024/brown.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,10 +45,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /Users/theodoremui/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\theod\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /Users/theodoremui/nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     }
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\theod\\\\OneDrive\\\\dev\\\\diversity-ideas\\\\notebooks\\\\2024'"
+       "'/Users/theodoremui/dev/diversity-ideas/notebooks/2024'"
       ]
      },
      "execution_count": 4,
@@ -91,9 +91,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error accessing file: ../../data/brown-opinions.parquet\n",
+      "Error details: Could not open Parquet input source '<Buffer>': Parquet magic bytes not found in footer. Either the file is corrupted or this is not a parquet file.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(4750, 6)"
+       "(0, 0)"
       ]
      },
      "execution_count": 5,
@@ -2317,7 +2325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
